运行容器的相关接口，等待Linux环境的测试。

--- a/etc/cloud_platform.yaml
+++ b/etc/cloud_platform.yaml
@@ -35,3 +35,8 @@ Pprof:
 
 AsyncTask:
   PullTaskWaitMillSec: 5000
+
+Container:
+  Host: 192.168.200.133
+  InitUsername: root
+  InitPassword: root
