--- a/etc/cloud_platform.yaml
+++ b/etc/cloud_platform.yaml
@@ -36,6 +36,7 @@ Pprof:
 AsyncTask:
   PullTaskWaitMillSec: 5000
 
+# Linux的初始化设置, 这个host可以用于db中
 Container:
   Host: 192.168.200.133
   InitUsername: root
